--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,9 +1,7 @@
-// Info https://containers.dev/implementors/json_reference/
 {
-//	name of the dev container
-	"name": "idea-demo",
-//	Or use a Dockerfile here, more info: https://containers.dev/guide/dockerfile
-	"image":  "openjdk:11"
-
+	"name": "kevsdev",
+	"build": {
+		"dockerfile": "Dockerfile"
+	}
 }
 
